--- a/public/package.json
+++ b/public/package.json
@@ -3,7 +3,7 @@
     "description": "Salvation Development YGOPro Server",
     "main": "application/index.html",
     "window": {
-        "toolbar": false,
+        "toolbar": true,
         "frame": true,
         "width": 1024,
         "min_width": 1024,
