--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
         "irc": "*",
         "busy": "*",
         "redis": "*",
-        "mocha": "*",
-        "portscanner": "*",
-        "watchjs": "*"
+        "mocha": "*"
     },
     "optionalDependencies": {
         "httpsys": "*",
         "node-ffi": "*"
     },
-    "bugs": "https://github.com/salvationdevelopment/ygocorejs/issues",
+    "script": {
+        "test": "istanbul test test/test.js"
+    },
+    "bugs": "https://github.com/salvationdevelopment/YGOPro-Support-System/issues",
     "author": "panthrowzay@gmail.com",
     "homepage": "http://salvationdevelopment.com",
     "window": {
