--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "node-ffi": "*"
     },
     "script": {
-        "test": "istanbul test test/test.js"
+        "test": "istanbul cover test/test.js"
     },
     "bugs": "https://github.com/salvationdevelopment/YGOPro-Support-System/issues",
     "author": "panthrowzay@gmail.com",
