coverage dir added

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "0.10"
 
 before_install:
+  - mkdir coverage
   - npm install -g mocha
   - npm install -g istanbul
   - npm install -g codeclimate-test-reporter
@@ -12,5 +13,5 @@ addons:
     repo_token: 6764db5cccd1a7d62f6acaf5c9316101b683ee711ad3800e4f9a3a115ceacdb1 
 
 after_script:
-  - cat lcov.info | codeclimate
+  - cat coverage/lcov.info | codeclimate
   
