--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ node_js:
   - "0.10"
 
 before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - mkdir coverage
+  - npm install -g mocha-phantomjs
   - npm install -g mocha
   - npm install -g istanbul
   - npm install -g codeclimate-test-reporter
