--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - mkdir coverage
+  - cd server
+  - git clone https://github.com/Fluorohydride/ygopro.git
+  - ls -l | egrep `^d'
+  - mv ygopro-master ygopro
   - npm install -g mocha-phantomjs
   - npm install -g mocha
   - npm install -g istanbul
