--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ before_install:
   - sleep 3 # give xvfb some time to start
   - mkdir coverage
   - cd server
+  - rm ygopro
   - git clone https://github.com/Fluorohydride/ygopro.git
   - ls -p | grep "/"
-  - mv ygopro-master ygopro
+  - mv ygocore ygopro
   - npm install -g mocha-phantomjs
   - npm install -g mocha
   - npm install -g istanbul
