--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,8 @@ before_install:
   - cd YGOCore
   - ls -p | grep "/"
   - xbuild /p:TargetFrameworkProfile="" /p:Configuration=Release
-  - ls -p | grep "/"
-  - cp YGOCore/bin/Release/OcgWrapper.dll YGOCore/bin/Release/YGOServer.exe ygopro
   - cd ../
-  - ls -p | grep "/"
+  - cp YGOCore/YGOCore/bin/Release/OcgWrapper.dll YGOCore/YGOCore/bin/Release/YGOServer.exe ../ygopro
   - cd ygopro
   - sudo add-apt-repository -y ppa:codegear/release
   - sudo add-apt-repository -y ppa:sonkun/sfml-stable
