--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_install:
   - cp YGOCore/YGOCore/bin/Release/OcgWrapper.dll YGOCore/YGOCore/bin/Release/YGOServer.exe ./ygopro
   - cd ygopro
   - rm ocgcore/premake4.lua
-  - cp ../../../test/ocgcore_linux_premake.lua ./ocgcore
-  - mv ocgcore/ocgcore_linux_premake.lua ocgcore/premake4.lua
+  - mv ../../../test/ocgcore_linux_premake.lua ocgcore/premake4.lua
   - sudo add-apt-repository -y ppa:codegear/release
   - sudo add-apt-repository -y ppa:sonkun/sfml-stable
   - sudo wget -q -O- http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
