--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,9 @@ before_install:
   - sudo cp 'irrKlang-64bit-1.5.0/bin/linux-gcc-64/libIrrKlang.so' /usr/lib/libirrKlang.so
   - sudo ldconfig
   - premake4 gmake && make config=release ocgcore -C build
-  - cd bin
-  - cd release
+  - cp bin/release/libocgcore.so ./
   - ls -p 
-  - cd ../../../../../
+  - cd ../../../
   - npm install -g mocha-phantomjs
   - npm install -g mocha
   - npm install -g istanbul
