--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
   - cd ygopro
   - rm ocgcore/premake4.lua
   - mv ../../../test/ocgcore_linux_premake.lua ocgcore/premake4.lua
+  - cp ../../../test/cards.cdb ./
+  - cp ../../../test/System.Data.SQLite.dll ./
   - sudo add-apt-repository -y ppa:codegear/release
   - sudo add-apt-repository -y ppa:sonkun/sfml-stable
   - sudo wget -q -O- http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
