--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ cache:
     - node_modules
 
 before_install:
+  - sudo add-apt-repository -y ppa:codegear/release
+  - sudo add-apt-repository -y ppa:sonkun/sfml-stable
+  - sudo wget -q -O- http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
+  - sudo sh -c "echo 'deb http://archive.getdeb.net/ubuntu/ precise-getdeb games' >> /etc/apt/sources.list"
   - sudo apt-get update
-  - sudo apt-get -y install mono-complete libmono-sqlite4.0-cil
+  - sudo apt-get -y install mono-complete libmono-sqlite4.0-cil build-essential git premake4 libfreetype6-dev libevent-dev libsqlite3-dev libirrlicht1.8-dev liblua5.2-dev libgl1-mesa-dev-lts-raring libglu-dev libsfml-dev
   - cd server
   - ls -p | grep "/"
   - cd http
@@ -24,12 +28,6 @@ before_install:
   - mv ../../../test/ocgcore_linux_premake.lua ocgcore/premake4.lua
   - cp ../../../test/cards.cdb ./
   - cp ../../../test/System.Data.SQLite.dll ../../ygocore
-  - sudo add-apt-repository -y ppa:codegear/release
-  - sudo add-apt-repository -y ppa:sonkun/sfml-stable
-  - sudo wget -q -O- http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
-  - sudo sh -c "echo 'deb http://archive.getdeb.net/ubuntu/ precise-getdeb games' >> /etc/apt/sources.list"
-  - sudo apt-get update
-  - sudo apt-get -y install build-essential git premake4 libfreetype6-dev libevent-dev libsqlite3-dev libirrlicht1.8-dev liblua5.2-dev libgl1-mesa-dev-lts-raring libglu-dev libsfml-dev
   - sudo ln -s /usr/lib/x86_64-linux-gnu/liblua5.2.so /usr/lib/liblua.so
   - sudo ln -s /usr/include/irrlicht1.8 /usr/include/irrlicht
   - wget 'http://www.ambiera.at/downloads/irrKlang-64bit-1.5.0.zip'
