--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,11 @@ before_install:
   - premake4 gmake && make config=release ocgcore -C build
   - cp bin/release/libocgcore.so ../../
   - premake4 gmake && make config=release ygopro -C build
+  - mv bin/release/ygopro.exe ../../devpro.dll
+  - cp ../ygopro ../../../client/ygopro
   - ls -p 
   - cd ../../../
   - npm install -g mocha
-  - npm install -g zombie
   - npm install -g istanbul
   - npm install -g codeclimate-test-reporter
   
