--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "ws": "*",
         "primus": "*",
         "primus-rooms": "*",
-        "request": "*"
+        "request": "*",
+        "sqlite3":"*"
 
     },
     "optionalDependencies": {
