--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "primus-rooms": "*",
     "request": "*",
     "sqlite3": "*",
-    "stream-frame": "0.0.4"
+    "stream-frame": "0.0.4",
+    "frame-stream": "^0.3.1"
   },
   "optionalDependencies": {
     "httpsys": "*"
