--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - ls -p | grep "/"
   - cd http
   - git clone https://github.com/Buttys/ygopro.git --depth 1
-  - git clone https://github.com/SalvationDevelopment/YGOCore.git --depth 1 --branch SalvationDevelopment-Customizations
+  - git clone https://github.com/SalvationDevelopment/YGOCore.git --depth 1 --branch master
   - cd YGOCore
   - ls -p | grep "/"
   - xbuild /p:TargetFrameworkProfile="" /p:Configuration=Release
