--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "^0.9.0",
     "frame-stream": "^0.3.1",
     "fs-walk": "0.0.1",
+    "node-static": "^0.7.6",
     "primus": "*",
     "primus-rooms": "*",
     "request": "*",
