--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "ygopro-js-server",
-  "description": "Salvation Development YGOPro Server",
-  "main": "ygoserver.js",
-  "version": "0.0.0",
+  "description": "YGOPro US Server (Salvation) - Saving Yu-Gi-Oh!",
+  "main": "server/server.js",
+  "version": "0.0.1",
   "keywords": [
     "ygopro",
     "my-card",
+    "devpro",
     "Salvation Development",
     "yugioh",
     "irc"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/salvationdevelopment/ygocorejs.git"
+    "url": "https://github.com/salvationdevelopment/YGOPro-Support-System.git"
   },
   "window": {
     "toolbar": true,
@@ -32,7 +33,8 @@
     "request": "*",
     "sqlite3": "*",
     "stream-frame": "0.0.4",
-    "ws": "*"
+    "ws": "*",
+    "gith" : "*"
   },
   "optionalDependencies": {
     "httpsys": "*"
