--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "main": "interface/index.html",
     "window": {
         "toolbar": false,
-        "frame": true,
+        "frame": false,
         "width": 1024,
         "min_width": 1024,
         "height": 535,
