tracking, unzip, rapid installer.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sqlite3": "*",
     "stream-frame": "0.0.4",
     "ws": "*",
-    "gith" : "*"
+    "gith" : "*",
+    "unzip" : "*"
   },
   "optionalDependencies": {
     "httpsys": "*"
