--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,17 @@
     "maintainers": [{
         "name": "James Gladney",
         "email": "panthrowzay@gmail.com"
-}]
+}],
+    "manifestUrl": "http://ygopro.us/releases/package.json",
+    "packages": {
+        "mac": {
+            "url": "http://ygopro.us/releases/mac.zip"
+        },
+        "win": {
+            "url": "http://ygopro.us/releases/win.zip"
+        },
+        "linux32": {
+            "url": "http://ygopro.us/releases/linux32.tar.gz"
+        }
+    }
 }
