--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
         "width": 1024,
         "min_width": 1024,
         "height": 535,
-        "max_height": 535,
         "min_height": 535,
-        "icon": "interface/icon.png"
+        "icon": "interface/icon.png",
+        "transparent":true
     },
     "webkit": {
         "plugin": true,
