IRC, colors, bug fixes

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ws": "*",
     "gith" : "*",
     "unzip" : "*",
-    "irc":"*"
+    "irc":"*",
+    "colors":"*"
   },
   "optionalDependencies": {
     "httpsys": "*"
