--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ygopro-js-server",
-  "description": "YGOPro US Server (Salvation) - Saving Yu-Gi-Oh!",
-  "main": "server/server.js",
-  "version": "0.0.1",
-  "keywords": [
+    "name": "ygopro-js-server",
+    "description": "YGOPro US Server (Salvation) - Saving Yu-Gi-Oh!",
+    "main": "server/server.js",
+    "version": "4.2.1",
+    "keywords": [
     "ygopro",
     "my-card",
     "devpro",
@@ -11,41 +11,30 @@
     "yugioh",
     "irc"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/salvationdevelopment/YGOPro-Support-System.git"
-  },
-  "window": {
-    "toolbar": true,
-    "frame": true,
-    "width": 1024,
-    "min_width": 1024,
-    "height": 535,
-    "icon": "application/icon.png"
-  },
-  "dependencies": {
-    "async": "^0.9.0",
-    "frame-stream": "^0.3.1",
-    "fs-walk": "0.0.1",
-    "node-static": "^0.7.6",
-    "primus": "*",
-    "primus-rooms": "*",
-    "request": "*",
-    "sqlite3": "*",
-    "stream-frame": "0.0.4",
-    "ws": "*",
-    "gith" : "*",
-    "unzip" : "*",
-    "irc":"*",
-    "colors":"*"
-  },
-  "optionalDependencies": {
-    "httpsys": "*"
-  },
-
-    
-    
-  "bugs": "https://github.com/salvationdevelopment/YGOPro-Support-System/issues",
-  "author": "panthrowzay@gmail.com",
-  "homepage": "http://salvationdevelopment.com"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/salvationdevelopment/YGOPro-Support-System.git"
+    },
+    "dependencies": {
+        "fs-walk": "*",
+        "node-static": "*",
+        "primus": "*",
+        "primus-rooms": "*",
+        "sqlite3": "*",
+        "ws": "*",
+        "irc": "*",
+        "colors": "*"
+    },
+    "optionalDependencies": {
+        "httpsys": "*",
+        "mocha": "*",
+        "istanbul": "*",
+        "phantomjs": "*"
+    },
+    "bugs": "https://github.com/salvationdevelopment/YGOPro-Support-System/issues",
+    "author": "panthrowzay@gmail.com",
+    "homepage": "http://ygopro.us",
+    "scripts": {
+        "test": "istanbul cover _mocha -- -R spec"
+    }
 }
