manual mode lock and shuffle

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "ws": "*",
         "irc": "*",
         "colors": "*",
+        "knuth-shuffle", "*",
         "lodash" : "*"
     },
     "optionalDependencies": {
