login system, tournament system.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "irc": "*",
         "colors": "*",
         "knuth-shuffle": "*",
-        "lodash" : "*"
+        "lodash" : "*",
+        "ldapjs" : "*"
     },
     "optionalDependencies": {
         "httpsys": "*",
