DuelServ, loginsystem start, policyserver, dependencies

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "colors": "*",
         "knuth-shuffle": "*",
         "lodash" : "*",
-        "ldapjs" : "*"
+        "ldapjs" : "*",
+        "policyfile" : "*"
     },
     "optionalDependencies": {
         "httpsys": "*",
