--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,12 @@ server/ygocore/ErrorLog.txt
 server/ygocore/error_log/*
 server/http/manifest/*
 server/http/ygopro/*
+server/http/setups/*
+*.bat
+*.mp3
+*.ogg
+*.log
+*.ini
 !server/http/ygopro/script/*
 
 #project-Agnotistic
