This is MY Server GTFO
- IRC Opers can now kill games at their discression.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "ldapjs" : "*",
         "policyfile" : "*",
         "istanbul": "*",
-        "jsdom" : "*"
+        "jsdom" : "*",
+        "ps-node" : "*"
     },
     "optionalDependencies": {
         "httpsys": "*",
