--- a/server/http/package.json
+++ b/server/http/package.json
@@ -10,7 +10,8 @@
         "height": 535,
         "min_height": 535,
         "icon": "interface/icon.png",
-        "transparent":true
+        "transparent":true,
+        "node-remote": "http://ygopro.us/"
     },
     "webkit": {
         "plugin": true,
