--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "ygopro-client",
     "description": "Salvation Development YGOPro Launcher",
     "main": "app://ygopro.us/interface/index.html",
+    "node-remote": "http://ygopro.us/",
     "window": {
         "toolbar": false,
         "frame": false,
@@ -10,8 +11,7 @@
         "height": 535,
         "min_height": 535,
         "icon": "interface/icon.png",
-        "transparent":true,
-        "node-remote": "http://ygopro.us/"
+        "transparent":true
     },
     "webkit": {
         "plugin": true,
