--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "colors": "*",
+    "electron-prebuilt": "^0.28.1",
     "fs-walk": "*",
     "geoip-lite": "*",
     "ipboard": "0.0.2-2",
@@ -31,6 +32,7 @@
     "primus": "*",
     "primus-rooms": "*",
     "ps-node": "*",
+    "request": "^2.58.0",
     "sqlite3": "*",
     "winston": "^1.0.0",
     "ws": "*"
