update pt strings

--- a/server/http/strings/pt.conf
+++ b/server/http/strings/pt.conf
@@ -38,6 +38,7 @@
 !system 81 Fim da End Phase
 !system 90 Fazer Normal Summon sem Tributo(s)?
 !system 91 Usar sua Special Summon adicional?
+!system 92 Usar Monstro do oponente
 !system 100 Jogar Primeiro
 !system 101 Jogar Segundo
 !system 200 Deseja usar o efeito de [%ls] [%ls]?
@@ -110,6 +111,8 @@
 !system 1005 Banidas
 !system 1006 Side Deck
 !system 1007 Sobrepor (Overlay)
+!system 1008 Zona de carta de campo
+!system 1009 Zona de cata Pendulum
 !system 1010 Earth
 !system 1011 Water
 !system 1012 Fire
@@ -140,6 +143,7 @@
 !system 1040 Psychic
 !system 1041 Divine-Beast
 !system 1042 Creator God
+!system 1043 Wyrm
 !system 1050 Monstro
 !system 1051 Mágica
 !system 1052 Armadilha
@@ -164,6 +168,7 @@
 !system 1071 Flip
 !system 1072 Toon
 !system 1073 Xyz
+!system 1074 Pendulum
 !system 1080 (N/A)
 #GUI 
 !system 1100 Destrói Mág./Arm.
@@ -200,14 +205,15 @@
 !system 1131 Nega Efeito
 #actions 
 !system 1150 Ativar
-!system 1151 Normal Summon
-!system 1152 Special Summon
-!system 1153 Set
-!system 1154 Flip Summon
-!system 1155 Para posição de Defesa
-!system 1156 Para posição de Ataque
-!system 1157 Ataque
+!system 1151 Invocar Normal
+!system 1152 Invocar Special
+!system 1153 Colocar
+!system 1154 Virar
+!system 1155 Defesa
+!system 1156 Ataque
+!system 1157 Atacar
 !system 1158 Olhar
+!system 1159 Colocar S/T
 #menu 
 !system 1200 Rede Local
 !system 1201 Um Jogador
@@ -314,6 +320,7 @@
 !system 1390 / Esperando /
 !system 1391 - Esperando -
 !system 1392 \ Esperando \
+!system 1393 Arquétipo:
 !system 1400 Não consegue conectar à Sala.
 !system 1401 Conexão Perdida!
 !system 1402 Ocorreu um erro durante a Transmissão.
@@ -358,6 +365,18 @@
 !system 1623 Resultado da Moeda: 
 !system 1624 Resultado do Dado: 
 #mod strings 
+!system 2016 Ajuda
+!system 2017 Inicio
+!system 2018 1vs2
+!system 2019 Turbo duel
+!system 2020 Anime
+!system 2021 Filtro:
+!system 2022 Modo CPU (beta)
+!system 2023 Sobre
+!system 2024 Descrição:
+!system 2025 Esta ciente em deletar este deck permanentemente?
+!system 2026 Deletado com sucesso!
+!system 2027 Apagar
 !system 2028 Volume
 !system 2029 Sala
 !system 2030 Jogadores
@@ -392,7 +411,11 @@
 !victory 0x15 Vitória pelo efeito de Destiny Board
 !victory 0x16 Vitória pelo efeito de Last Turn
 !victory 0x17 Vitória pelo efeito de Number 88: Gimmick Puppet - Destiny Leo
-!victory 0x20 Vitória da Ronda pelo efeito de 「%ls」
+!victory 0x18 Vitória pelo efeito de Number C88: Gimmick Puppet Disaster Leo
+!victory 0x19 Vitória pelo efeito de Jackpot 7
+!victory 0x1a Vitória pelo efeito de Relay Soul
+!victory 0x1b Vitória pelo efeito de Ghostrick Spoiled Angel
+!victory 0x20 Jogo ganho pelo efeito de 「%ls」
 #counters
 !counter 0x3001 Spell Counter
 !counter 0x2 Wedge Counter
@@ -437,7 +460,237 @@
 !counter 0x3028 Counter Dark Catapulter
 !counter 0x29 Counter (Balloon Lizard)
 !counter 0x2a Counter (Magic Reflector)
+!counter 0x2c You Got It Boss! Counter
+!counter 0x2d Counter(Kickfire)
+!counter 0x2e Shark Counter
+!counter 0x30 Feel the Flow Counter
 !counter 0x302b Destiny Counter
+!counter 0x32 Balloon Counter
+!counter 0x33 Hermit Yokai Counter
 !counter 0x90 Maiden Counter
 !counter 0x91 Speed Counter
-!counter 0x2c Roger Counter
+!counter 0x92 Plasma Counter
+!counter 0x93 Sacred Beast Counter
+!counter 0x94 Pumpkin Counter
+!counter 0x95 Rising Sun Counter
+#setcodes
+!setcode 0x1 Ally of Justice
+!setcode 0x2 Genex
+!setcode 0x1002 R－Genex
+!setcode 0x2002 Genex Ally
+!setcode 0x4 Amazoness
+!setcode 0x5 Arcana Force
+!setcode 0x6 Dark World
+!setcode 0x7 Ancient Gear
+!setcode 0x8 HERO
+!setcode 0x3008 Elemental HERO
+!setcode 0x6008 Evil HERO
+!setcode 0xc008 Destiny HERO
+!setcode 0x5008 Vision HERO
+!setcode 0xa008 Masked HERO
+!setcode 0x9 Neos
+!setcode 0xa Lswarm
+!setcode 0x100a Steelswarm
+!setcode 0xb Infernity
+!setcode 0xc Alien
+!setcode 0xd Saber
+!setcode 0x100d X－Saber
+!setcode 0x300d XX－Saber
+!setcode 0xe Watt
+!setcode 0xf Ojama
+!setcode 0x10 Gusto
+!setcode 0x11 Karakuri
+!setcode 0x12 Frog
+!setcode 0x13 Meklord
+!setcode 0x3013 Meklord Emperor
+!setcode 0x6013 Meklord Army
+!setcode 0x15 B.E.S.
+!setcode 0x16 Roid
+!setcode 0x1016 Vehicroid
+!setcode 0x17 Synchron
+!setcode 0x18 Cloudian
+!setcode 0x19 Gladiator Beast
+!setcode 0x1a Dark Scorpion
+!setcode 0x1b Phantom Beast
+!setcode 0x1d Koa'ki Meiru
+!setcode 0x1e Chrysalis
+!setcode 0x1f Neo-Spacian
+!setcode 0x20 Shien
+!setcode 0x21 Earthbound Immortal
+!setcode 0x22 Jurrac
+!setcode 0x23 Malefic
+!setcode 0x24 Scrap
+!setcode 0x25 Iron Chain
+!setcode 0x26 Morphtronic
+!setcode 0x27 T.G.
+!setcode 0x28 Batteryman
+!setcode 0x29 Dragunity
+!setcode 0x2a Naturia
+!setcode 0x2b Ninja
+!setcode 0x102b Armor Ninja
+!setcode 0x2c Flamvell
+!setcode 0x2e Gravekeeper
+!setcode 0x2f Ice Barrier
+!setcode 0x30 Vylon
+!setcode 0x31 Fortune Lady
+!setcode 0x32 Volcanic
+!setcode 0x33 Blackwing
+!setcode 0x34 Crystal Beast
+!setcode 0x93 Cyber
+!setcode 0x94 Cybernetic
+!setcode 0x1093 Cyber Dragon
+!setcode 0x103 Cyber Dragon Related
+!setcode 0x35 Fabled
+!setcode 0x1035 The Fabled
+!setcode 0x36 Machina
+!setcode 0x37 Mist Valley
+!setcode 0x38 Lightsworn
+!setcode 0x39 Laval
+!setcode 0x3a Gishki
+!setcode 0x3b Red-Eyes
+!setcode 0x3c Reptilianne
+!setcode 0x3d Six Samurai
+!setcode 0x3e Worm
+!setcode 0x3f Majestic
+!setcode 0x40 Forbidden One
+!setcode 0x41 LV
+!setcode 0x42 Nordic
+!setcode 0x3042 Nordic Ascendant
+!setcode 0x6042 Nordic Beast
+!setcode 0xa042 Nordic Alfar
+!setcode 0x5042 Nordic Relic
+!setcode 0x43 Junk
+!setcode 0x44 The Agent
+!setcode 0x45 Archfiend
+!setcode 0x46 Polymerization/Fusion
+!setcode 0x47 Gem-
+!setcode 0x1047 Gem-Knight
+!setcode 0x48 Number
+!setcode 0x49 Skyblaster
+!setcode 0x4a Timelord
+!setcode 0x4b Aesir
+!setcode 0x4c Trap Hole
+!setcode 0x4e Evol
+!setcode 0x304e Evoltile
+!setcode 0x504e Evolzar
+!setcode 0x604e Evolsaur
+!setcode 0x4f Buster
+!setcode 0x104f /Assault Mode
+!setcode 0x50 Venom
+!setcode 0x51 Gadget
+!setcode 0x52 Guardian
+!setcode 0x53 Constellar
+!setcode 0x54 Gagaga
+!setcode 0x55 Photon
+!setcode 0x56 Inzektor
+!setcode 0x57 Resonator
+!setcode 0x58 Wind-Up
+!setcode 0x59 Gogogo
+!setcode 0x5a Penguin
+!setcode 0x5b Inmato
+!setcode 0x5c Sphinx
+!setcode 0x60 Bamboo Sword
+!setcode 0x61 Ninjitsu Art
+!setcode 0x62 Toon
+!setcode 0x63 Reactor
+!setcode 0x64 Harpie
+!setcode 0x65 Infestation
+!setcode 0x66 Symphonic Warrior
+!setcode 0x67 Iron
+!setcode 0x68 Tin
+!setcode 0x69 Hieratic
+!setcode 0x6a Butterspy
+!setcode 0x6b Bounzer
+!setcode 0x6c Lightray
+!setcode 0x6d Djinn
+!setcode 0x306d Divine Dragon
+!setcode 0x606d Djinn of Rituals
+!setcode 0x6e Prophecy
+!setcode 0x106e Spellbook
+!setcode 0x6f Heroic
+!setcode 0x106f Heroic Challenger
+!setcode 0x70 Chronomaly
+!setcode 0x71 Madolche
+!setcode 0x72 Geargia
+!setcode 0x1072 Geargiano
+!setcode 0x73 Xyz
+!setcode 0x74 Mermail
+!setcode 0x75 Abyss-
+!setcode 0x76 Heraldic Beast
+!setcode 0x77 Atlantean
+!setcode 0x78 Nimble
+!setcode 0x79 Fire Fist
+!setcode 0x7a Ignoble Knight
+!setcode 0x107a Noble Knight
+!setcode 0x207a Noble Arms
+!setcode 0x7b Galaxy
+!setcode 0x107b Galaxy-Eyes
+!setcode 0x307b Galaxy-Eyes Tachyon
+!setcode 0x7c Fire Formation
+!setcode 0x7d Hazy
+!setcode 0x107d Hazy Flame
+!setcode 0x7e ZW
+!setcode 0x7f Utopia
+!setcode 0x80 Duston
+!setcode 0x81 Fire King
+!setcode 0x1081 Fire King Avatar
+!setcode 0x82 Dododo
+!setcode 0x100 Synchron Synchos
+!setcode 0x101 Syncro Fusions
+!setcode 0x102 Evil Hero Fusions
+!setcode 0x83 Gimmick Puppet
+!setcode 0x101b Mecha Phantom Beast
+!setcode 0x84 Battlin' Boxer
+!setcode 0x1073 Chaos Xyz
+!setcode 0x1048 Number C
+!setcode 0x85 Super-Defense
+!setcode 0x86 Star Seraph
+!setcode 0x87 Umbrals
+!setcode 0x88 Bujin
+!setcode 0x8a Fascinating
+!setcode 0x108a Traptrix
+!setcode 0x89 Hole
+!setcode 0x8b Malicvorous
+!setcode 0x8d Ghostrick
+!setcode 0x8e Vampire
+!setcode 0x8f Zubaba
+!setcode 0x90 Sylvan
+!setcode 0x91 Necrovally
+!setcode 0x92 Heraldry
+!setcode 0x95 Rank-Up Magic
+!setcode 0x96 Fishborg
+!setcode 0x97 Artifact
+!setcode 0x98 Magician
+!setcode 0x99 Odd-Eyes
+!setcode 0x9a Superheavy Samurai
+!setcode 0x9b Melodious
+!setcode 0x9c tellarknight
+!setcode 0x9d Shaddoll
+!setcode 0x109d El Shaddoll
+!setcode 0x9e Yang Zing
+!setcode 0x9f Performapal
+!setcode 0xa0 Legendary Knight
+!setcode 0xa1 Legendary Dragon
+!setcode 0xa2 Dark Magician
+!setcode 0xa3 Stardust
+!setcode 0xa4 Winged Kuriboh
+!setcode 0xa5 Change
+!setcode 0xa6 Sprout
+!setcode 0xa7 Artorigus
+!setcode 0xa8 Laundsallyn
+!setcode 0xa9 Furnimal
+!setcode 0xaa Qliphoth
+!setcode 0xab Deskbot
+!setcode 0xac Goblin
+!setcode 0xad Des-Toy
+!setcode 0xae Covenant
+!setcode 0xaf DD
+!setcode 0xb0 Gottoms
+!setcode 0xb1 Burning Abyss
+!setcode 0xb2 U.A.
+!setcode 0xb3 Hermit Youkai
+!setcode 0xb4 Necloth
+!setcode 0xb5 Spirit Beast
+!setcode 0x10b5 Spirit Beast Tamer
+!setcode 0x20b5 Noble Spirit Beast
+!setcode 0xb6 Infernoid
