--- a/server/http/strings/pt.conf
+++ b/server/http/strings/pt.conf
@@ -112,7 +112,7 @@
 !system 1006 Side Deck
 !system 1007 Sobrepor (Overlay)
 !system 1008 Zona de carta de campo
-!system 1009 Zona de cata Pendulum
+!system 1009 Zona de carta Pendulum
 !system 1010 Earth
 !system 1011 Water
 !system 1012 Fire
