prevent dead joins

--- a/client/strings/en.conf
+++ b/client/strings/en.conf
@@ -647,6 +647,7 @@
 !setcode 0x86 Star Seraph
 !setcode 0x87 Umbrals
 !setcode 0x88 Bujin
+!setcode 0x8a Fascinating
 !setcode 0x108a Traptrix
 !setcode 0x89 Hole
 !setcode 0x8b Malicvorous
@@ -677,47 +678,19 @@
 !setcode 0xa6 Sprout
 !setcode 0xa7 Artorigus
 !setcode 0xa8 Laundsallyn
-!setcode 0xa9 Fluffal
-!setcode 0xaa Qli
+!setcode 0xa9 Furnimal
+!setcode 0xaa Qliphoth
 !setcode 0xab Deskbot
 !setcode 0xac Goblin
-!setcode 0xad Frightfur
+!setcode 0xad Des-Toy
 !setcode 0xae Covenant
 !setcode 0xaf DD
 !setcode 0xb0 Gottoms
 !setcode 0xb1 Burning Abyss
 !setcode 0xb2 U.A.
 !setcode 0xb3 Hermit Youkai
-!setcode 0xb4 Nekroz
+!setcode 0xb4 Necloth
 !setcode 0xb5 Spirit Beast
 !setcode 0x10b5 Spirit Beast Tamer
 !setcode 0x20b5 Noble Spirit Beast
 !setcode 0xb6 Infernoid
-!setcode 0xd3 PSY-Frame
-!setcode 0x2016 Speedroid
-!setcode 0x1045 Red Dragon Archfiend
-!setcode 0xd0 Majespecter
-!setcode 0xd1 Graydle
-!setcode 0xcf Black Luster Soldier
-!setcode 0xbd Gaia the Fierce Knight
-!setcode 0xc6 Performage
-!setcode 0xc8 Igknight
-!setcode 0xba Raidraptor
-!setcode 0xd2 Kozmo
-!setcode 0xc3 Edge Imp
-!setcode 0xc5 Void
-!setcode 0xc4 Zefra
-!setcode 0xbf Charmer
-!setcode 0xc0 Familiar-Possessed
-!setcode 0xd4 Burgesstoma
-!setcode 0xc9 Aroma
-!setcode 0xcb Aether
-!setcode 0xd3 Kaiju
-!setcode 0xcd Aquaactress
-!setcode 0xcc Prediction Princess
-!setcode 0xc7 Dracoslayer
-!setcode 0xbe Monarch
-!setcode 0xd7 Shiranui
-!setcode 0x1e8 Buster Blader
-!setcode 0x1e7 Destruction Swordmaster
-!setcode 0x1e71 Dinomist
