--- a/server/http/strings/en.conf
+++ b/server/http/strings/en.conf
@@ -463,10 +463,14 @@
 !counter 0x2c You Got It Boss! Counter
 !counter 0x2d Counter(Kickfire)
 !counter 0x2e Shark Counter
-!counter 0x30 Feel the Flow Counter
+!counter 0x30 Hi-Five the Sky Counter
 !counter 0x302b Destiny Counter
 !counter 0x32 Balloon Counter
-!counter 0x33 Hermit Yokai Counter
+!counter 0x33 Yosen Counter
+!counter 0x34 Counter(BOXer)
+!counter 0x35 Symphonic Counter
+!counter 0x3036 Entermage Counter
+!counter 0x37 Kaiju Counter
 !counter 0x90 Maiden Counter
 !counter 0x91 Speed Counter
 !counter 0x92 Plasma Counter
@@ -507,6 +511,7 @@
 !setcode 0x15 B.E.S.
 !setcode 0x16 Roid
 !setcode 0x1016 Vehicroid
+!setcode 0x2016 Speedroid
 !setcode 0x17 Synchron
 !setcode 0x18 Cloudian
 !setcode 0x19 Gladiator Beast
@@ -535,7 +540,8 @@
 !setcode 0x31 Fortune Lady
 !setcode 0x32 Volcanic
 !setcode 0x33 Blackwing
-!setcode 0x34 Crystal Beast
+!setcode 0x34 Crystal
+!setcode 0x1034 Crystal Beast
 !setcode 0x93 Cyber
 !setcode 0x94 Cybernetic
 !setcode 0x1093 Cyber Dragon
@@ -548,6 +554,7 @@
 !setcode 0x39 Laval
 !setcode 0x3a Gishki
 !setcode 0x3b Red-Eyes
+!setcode 0x104 Red-Eyes Fusions
 !setcode 0x3c Reptilianne
 !setcode 0x3d Six Samurai
 !setcode 0x3e Worm
@@ -562,6 +569,7 @@
 !setcode 0x43 Junk
 !setcode 0x44 The Agent
 !setcode 0x45 Archfiend
+!setcode 0x1045 Red Dragon Archfiend
 !setcode 0x46 Polymerization/Fusion
 !setcode 0x47 Gem-
 !setcode 0x1047 Gem-Knight
@@ -595,7 +603,8 @@
 !setcode 0x63 Reactor
 !setcode 0x64 Harpie
 !setcode 0x65 Infestation
-!setcode 0x66 Symphonic Warrior
+!setcode 0x66 Warrior
+!setcode 0x1066 Symphonic Warrior
 !setcode 0x67 Iron
 !setcode 0x68 Tin
 !setcode 0x69 Hieratic
@@ -664,7 +673,9 @@
 !setcode 0x99 Odd-Eyes
 !setcode 0x9a Superheavy Samurai
 !setcode 0x9b Melodious
+!setcode 0x109b Melodious Maestra
 !setcode 0x9c tellarknight
+!setcode 0x109c Stellarknight
 !setcode 0x9d Shaddoll
 !setcode 0x109d El Shaddoll
 !setcode 0x9e Yang Zing
@@ -672,25 +683,63 @@
 !setcode 0xa0 Legendary Knight
 !setcode 0xa1 Legendary Dragon
 !setcode 0xa2 Dark Magician
+!setcode 0x10a2 Dark Magician Girl
 !setcode 0xa3 Stardust
 !setcode 0xa4 Winged Kuriboh
 !setcode 0xa5 Change
 !setcode 0xa6 Sprout
 !setcode 0xa7 Artorigus
 !setcode 0xa8 Laundsallyn
-!setcode 0xa9 Furnimal
-!setcode 0xaa Qliphoth
+!setcode 0xa9 Fluffal
+!setcode 0xaa Qli
 !setcode 0xab Deskbot
 !setcode 0xac Goblin
-!setcode 0xad Des-Toy
-!setcode 0xae Covenant
-!setcode 0xaf DD
+!setcode 0xad Frightfur
+!setcode 0xae Dark Contract
+!setcode 0xaf D/D
+!setcode 0x10af D/D/D
 !setcode 0xb0 Gottoms
 !setcode 0xb1 Burning Abyss
 !setcode 0xb2 U.A.
-!setcode 0xb3 Hermit Youkai
-!setcode 0xb4 Necloth
-!setcode 0xb5 Spirit Beast
-!setcode 0x10b5 Spirit Beast Tamer
-!setcode 0x20b5 Noble Spirit Beast
-!setcode 0xb6 Infernoid
+!setcode 0xb3 Yosenju
+!setcode 0xb4 Nekroz
+!setcode 0xb5 Ritual Beast
+!setcode 0x10b5 Ritual Beast Tamer
+!setcode 0x20b5 Spiritual Beast
+!setcode 0x40b5 Ritual Beast Ulti-
+!setcode 0xb6 Outer God
+!setcode 0xb7 Elder Entity
+!setcode 0xb8 Old Entity
+!setcode 0xb9 Blaze Accelerator
+!setcode 0xba Raidraptor
+!setcode 0xbb Infernoid
+!setcode 0xbc Jinzo
+!setcode 0xbd Gaia The Fierce Knight
+!setcode 0xbe Monarch
+!setcode 0xbf Charmer
+!setcode 0xc0 Familiar-Possessed
+!setcode 0xc2 Power Tool
+!setcode 0xc3 Edge Imp
+!setcode 0xc4 Zefra
+!setcode 0xc5 Void
+!setcode 0xc6 Performage
+!setcode 0xc7 Dracoslayer
+!setcode 0xc8 Igknight
+!setcode 0xc9 Aromage
+!setcode 0xca Empowered Warrior
+!setcode 0xcb Aether
+!setcode 0xcc Prediction Princess
+!setcode 0xcd Aquaactress
+!setcode 0xce Aquarium
+!setcode 0xcf Black Luster Soldier
+!setcode 0xd0 Majespecter
+!setcode 0xd1 Greydle
+!setcode 0xd2 Kozmo
+!setcode 0xd3 Kaiju
+!setcode 0xd4 Burgesstoma
+!setcode 0xc1 PSY-Frame
+!setcode 0x1373 The Phantom Knights
+!setcode 0x1e71 Dinomist
+!setcode 0x1e7 Destruction Swordmaster
+!setcode 0xd7 Shiranui
+!setcode 0x1e8 Buster Blader
